feat - finalize all endpoints and swagger documentation
